<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/black"
    tools:context=".ActivityMain">

    <!--текст-->
    <LinearLayout
        android:id="@+id/layoutForExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/linearLayoutButtons"
        app:layout_constraintBottom_toTopOf="@+id/string2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:hint="@string/expression"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <!--кнопки-->

    <LinearLayout
        android:id="@+id/string2"
        style="@style/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/string3" >

        <Button
            android:id="@+id/b7"
            android:text="@string/seven"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b8"
            android:text="@string/eight"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b9"
            android:text="@string/nine"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/bMultiply"
            android:text="@string/multiply"
            style="@style/rightButtons"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/string3"
        style="@style/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/string4" >

        <Button
            android:id="@+id/b4"
            android:text="@string/four"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b5"
            android:text="@string/five"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b6"
            android:text="@string/six"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/bDivivsion"
            android:text="@string/division"
            style="@style/rightButtons"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/string4"
        style="@style/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/string5" >

        <Button
            android:id="@+id/b1"
            android:text="@string/one"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b2"
            android:text="@string/two"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b3"
            android:text="@string/three"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/bPlus"
            android:text="@string/plus"
            style="@style/rightButtons" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/string5"
        style="@style/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/string6" >

        <Button
            android:id="@+id/bDelete"
            android:text="@string/delete"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/b0"
            android:text="@string/zero"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/bComma"
            android:text="@string/comma"
            style="@style/leftButtons" />

        <Button
            android:id="@+id/bMinus"
            android:text="@string/minus"
            style="@style/rightButtons" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/string6"
        style="@style/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/bEquals"
            android:text="@string/equals"
            style="@style/rightButtons" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>